Changes what the embed says

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <title>Ava's Photography</title>
 
 <meta property="og:title" content="Ava's Photography" />
-<meta property="og:description" content="I share Photos I take in my discord server!" />
+<meta property="og:description" content="Hello, My name is Ava. This website shows photos I have taken, which also includes an invite link to my 'german' Discord server. I hope you like what photos I take." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://avalilac.github.io/website/" />
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Ava's Photography" />
-<meta name="twitter:description" content="I share Photos I take in my discord server!" />
+<meta name="twitter:description" content="Hello, My name is Ava. This website shows photos I have taken, which also includes an invite link to my 'german' Discord server. I hope you like what photos I take." />
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;}
@@ -55,7 +55,6 @@ header p{margin-top:5px;font-size:1rem;color:#9a9a9a;}
     user-drag:none;
 }
 
-/* Buttons below carousel */
 .carousel-controls{
     display:flex;
     justify-content:center;
@@ -98,7 +97,7 @@ footer{padding:10px;text-align:center;font-size:.8rem;color:#777; flex-shrink:0;
 
 <header>
     <h1>Ava's Photography</h1>
-    <p>Personal work & visual storytelling. Join the Discord to see more.</p>
+    <p>Hello, My name is Ava. This website shows photos I have taken, which also includes an invite link to my "german" Discord server. I hope you like what photos I take.</p>
 </header>
 
 <div class="main-section">
@@ -152,7 +151,6 @@ async function loadImages() {
 
 loadImages();
 
-// Carousel functionality
 let scrollAmount = 0;
 
 nextBtn.addEventListener("click", ()=>{
